// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render a readOnly select from widget properties 1`] = `
<body>
  <div>
    <div
      class="MuiFormControl-root"
    >
      <div
        class="makeStyles-propertySectionLabel-28"
      >
        <h6
          class="MuiTypography-root makeStyles-typography-29 MuiTypography-subtitle2"
        >
          SelectLabel
        </h6>
        <div
          class="makeStyles-decorators-30"
        />
      </div>
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline Mui-disabled Mui-disabled MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
        data-testid="SelectLabel"
      >
        <div
          aria-disabled="true"
          aria-haspopup="listbox"
          class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input makeStyles-style-25 makeStyles-style-27 Mui-disabled Mui-disabled Mui-disabled"
          role="button"
        >
          <em>
            None
          </em>
        </div>
        <input
          aria-hidden="true"
          class="MuiSelect-nativeInput"
          tabindex="-1"
          value=""
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSelect-icon Mui-disabled"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
      <p
        class="MuiFormHelperText-root"
      />
    </div>
  </div>
</body>
`;

exports[`should render the select with empty style 1`] = `
<body>
  <div>
    <div
      class="MuiFormControl-root"
    >
      <div
        class="makeStyles-propertySectionLabel-16"
      >
        <h6
          class="MuiTypography-root makeStyles-typography-17 MuiTypography-subtitle2"
        >
          SelectLabel
        </h6>
        <div
          class="makeStyles-decorators-18"
        />
      </div>
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
        data-testid="SelectLabel"
      >
        <div
          aria-haspopup="listbox"
          class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input makeStyles-style-13 makeStyles-style-15"
          role="button"
          tabindex="0"
        >
          <em>
            None
          </em>
        </div>
        <input
          aria-hidden="true"
          class="MuiSelect-nativeInput"
          tabindex="-1"
          value=""
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSelect-icon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
      <p
        class="MuiFormHelperText-root"
      />
    </div>
  </div>
</body>
`;

exports[`should render the select with help hint 1`] = `
<body>
  <div>
    <div
      class="MuiFormControl-root"
    >
      <div
        class="makeStyles-propertySectionLabel-22"
      >
        <h6
          class="MuiTypography-root makeStyles-typography-23 MuiTypography-subtitle2"
        >
          SelectLabel
        </h6>
        <div
          class="makeStyles-decorators-24"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-colorSecondary"
            focusable="false"
            style="margin-left: 8px; font-size: 16px;"
            title=""
            viewBox="0 0 24 24"
          >
            <path
              d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z"
            />
          </svg>
        </div>
      </div>
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
        data-testid="SelectLabel"
      >
        <div
          aria-haspopup="listbox"
          class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input makeStyles-style-19 makeStyles-style-21"
          role="button"
          tabindex="0"
        >
          <em>
            None
          </em>
        </div>
        <input
          aria-hidden="true"
          class="MuiSelect-nativeInput"
          tabindex="-1"
          value=""
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSelect-icon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
      <p
        class="MuiFormHelperText-root"
      />
    </div>
  </div>
</body>
`;

exports[`should render the select with style 1`] = `
<body>
  <div>
    <div
      class="MuiFormControl-root"
    >
      <div
        class="makeStyles-propertySectionLabel-10"
      >
        <h6
          class="MuiTypography-root makeStyles-typography-11 MuiTypography-subtitle2"
        >
          SelectLabel
        </h6>
        <div
          class="makeStyles-decorators-12"
        />
      </div>
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
        data-testid="SelectLabel"
      >
        <div
          aria-haspopup="listbox"
          class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input makeStyles-style-7 makeStyles-style-9"
          role="button"
          tabindex="0"
        >
          <em>
            None
          </em>
        </div>
        <input
          aria-hidden="true"
          class="MuiSelect-nativeInput"
          tabindex="-1"
          value=""
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSelect-icon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
      <p
        class="MuiFormHelperText-root"
      />
    </div>
  </div>
</body>
`;

exports[`should render the select without style 1`] = `
<body>
  <div>
    <div
      class="MuiFormControl-root"
    >
      <div
        class="makeStyles-propertySectionLabel-4"
      >
        <h6
          class="MuiTypography-root makeStyles-typography-5 MuiTypography-subtitle2"
        >
          SelectLabel
        </h6>
        <div
          class="makeStyles-decorators-6"
        />
      </div>
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-fullWidth MuiInput-fullWidth MuiInputBase-formControl MuiInput-formControl"
        data-testid="SelectLabel"
      >
        <div
          aria-haspopup="listbox"
          class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input makeStyles-style-1 makeStyles-style-3"
          role="button"
          tabindex="0"
        >
          <em>
            None
          </em>
        </div>
        <input
          aria-hidden="true"
          class="MuiSelect-nativeInput"
          tabindex="-1"
          value=""
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSelect-icon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
      <p
        class="MuiFormHelperText-root"
      />
    </div>
  </div>
</body>
`;
